fix(api): Replace Ambiguous ResponseEntities With Ones That Return The Wrapped View Object